--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,5 +1,23 @@
+{% extends 'base/main.html' %}
+{% block content %}
+
+{% if request.user.is_authenticated %}
+    <p>{{ request.user }}</p>
+    <a href="{% url 'logout' %}">Logout</a>
+{% else %}
+    <a href="{% url 'login' %}">Login</a>
+{% endif %}
+
+
+<hr>
 <h1>Minha lista de tarefas</h1>
 <a href="{% url 'task-create' %}">Adicionar Tarefa</a>
+
+<form action="" method="GET">
+    <input type="text" name="search-area" value="{{ search_input }}">
+    <input type="submit" value="Pesquisar">
+</form>
+
 <table>
     <tr>
         <th>Item</th>
@@ -9,7 +27,6 @@
     {% for task in tasks %}
     <tr>
         <td>{{ task.title }}</td>
-        <td><a href="{% url 'task-detail' task.id %}">View</a></td>
         <td><a href="{% url 'task-update' task.id %}">Editar</a></td>
         <td><a href="{% url 'task-delete' task.id %}">Delete</a></td>
     </tr>
@@ -17,3 +34,5 @@
         <h3>Nenhum item na lista</h3>
     {% endfor %}
 </table>
+
+{% endblock content%}
