--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -1,9 +1,16 @@
-<h1>Login</h1>
+{% extends 'base/main.html' %}
+{% block content %}
 
-<form action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Enviar">
-</form>
+<div class="header-bar">
+    <h1>Entrar</h1>
+</div>
 
-<p>Não tem uma conta?<a href="{% url 'register' %}">Criar conta</a> </p>
+<div class="card-body">
+    <form method="POST">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input class="button" type="submit" value="Login">
+    </form>
+    <p>Não tem conta? <a href="{% url 'register' %}">Register</a></p>
+</div>
+{% endblock %}
