--- a/base/templates/base/task_confirm_delete.html
+++ b/base/templates/base/task_confirm_delete.html
@@ -1,7 +1,14 @@
-<form method="POST">
-    {% csrf_token %}
-    <p>Você tem certeza que quer deletar essa tarefa? "{{ task }}"</p>
-    <input type="submit" value="Delete">
-</form>
+{% extends 'base/main.html' %}
+{% block content %}
+<div class="header-bar">
+    <a href="{% url 'tasks' %}">&#8592;Voltar</a>
+</div>
 
-<a href="{% url 'tasks' %}">Voltar</a>
+<div class="card-body">
+    <form method="POST">
+        {% csrf_token %}
+        <p>Tem certeza de que deseja deletar a tarefa? "{{task}}"</p>
+        <input class="button" type="submit" value="Delete" />
+    </form>
+</div>
+{% endblock %}
